fanpage.html with internal css added

--- a/fanpage.html
+++ b/fanpage.html
@@ -2,10 +2,44 @@
 <html lang="en">
     <head>
         <title>A few notes on Paul Simon</title>
+       <style>
+           h1 {
+               text-align: center;
+               text-transform: lowercase;
+               font-family: monospace;
+           }
+           h2 {
+               font-family: monospace;
+               text-transform: lowercase;
+               text-align: center;
+           }
+           p {
+               font-family: sans-serif;
+           }
+           .center {
+               display: block;
+               margin-left: auto;
+               margin-right: auto;
+               width: 50%
+           }
+           .video {
+                 float: none;
+                 margin-left: auto;
+                 margin-right: auto;
+                 text-align: center;
+                 
+            }
+           }
+           ul {
+               font-family: sans-serif;
+           }
+
+       </style>
     </head>
     <body>
         <h1>A few notes on Paul Simon</h1>
-        <img src="https://gaslightrecords.com/assets/img/feature/paul-simon-1965-feature.jpg">
+        
+        <img src="https://gaslightrecords.com/assets/img/feature/paul-simon-1965-feature.jpg" class="center">
         <h2>
             About Paul Simon
         </h2>
@@ -13,15 +47,13 @@
             Paul Simon is a singer-songwriter, composer, and poet from New York City. He was originally part of the duo Simon & Garfunkel, has won 16 grammys, and was inducted into the Rock and Roll Hall of Fame in 2001. Read more on his website <a href="http://www.paulsimon.com/" target="blank">here</a>
         </p>
         <h2>Some of Paul Simon's albums</h2>
-        <ul>
+        <ul style="font-family: sans-serif">
             <li>Wednesday Morning 3 A.M., 1964 (Simon & Garfunkel)</li>
             <li>Paul Simon, 1972</li>
             <li>Graceland, 1986</li>
         </ul>
         <h2>A favorite song</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/J_pRUZxIgdQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>
-            <a href="https://youtu.be/J_pRUZxIgdQ/" target="blank">https://youtu.be/J_pRUZxIgdQ/</a>
-        </p>
-    </body>
+        <div class="video"><iframe src="https://player.vimeo.com/video/73031828" width="640" height="480" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <p><a href="https://vimeo.com/73031828">Paul Simon - Concert in The Park (1991) The Obvious Child [640x480]</a> from <a href="https://vimeo.com/user19735102">juanito villanova</a> on <a href="https://vimeo.com">Vimeo</a>.</p></div>
+        </body>
     </html>
