added an internal HTML comment

--- a/fanpage.html
+++ b/fanpage.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>A few notes on Paul Simon</title>
+       <!--This is the internal CSS-->
        <style>
            h1 {
                text-align: center;
@@ -26,8 +27,7 @@
                  float: none;
                  margin-left: auto;
                  margin-right: auto;
-                 text-align: center;
-                 
+                 text-align: center; 
             }
            
            ul {
