--- a/fanpage.html
+++ b/fanpage.html
@@ -38,7 +38,7 @@
     </head>
     <body>
         <h1>A few notes on Paul Simon</h1>
-        
+        <!--added a class to this image-->
         <img src="https://gaslightrecords.com/assets/img/feature/paul-simon-1965-feature.jpg" class="center">
         <h2>
             About Paul Simon
@@ -47,6 +47,7 @@
             Paul Simon is a singer-songwriter, composer, and poet from New York City. He was originally part of the duo Simon & Garfunkel, has won 16 grammys, and was inducted into the Rock and Roll Hall of Fame in 2001. Read more on his website <a href="http://www.paulsimon.com/" target="blank">here</a>
         </p>
         <h2>Some of Paul Simon's albums</h2>
+       <!--This is an unordered list-->
         <ul>
             <li>Wednesday Morning 3 A.M., 1964 (Simon & Garfunkel)</li>
             <li>Paul Simon, 1972</li>
